@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-29T08:10:43Z",
+  "timestamp" : "2023-08-29T16:09:56Z",
   "count_outdated" : 153015,
   "uniques_outdated" : 1643,
-  "count" : 157320,
+  "count" : 157415,
   "uniques" : 1674,
   "clones" : [
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 113, 301 ],
-      "count_decinc": [ 168, 301 ],
+      "count": 41,
+      "count_minmax": [ 41, 301 ],
+      "count_decinc": [ 260, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 1, 3 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-08-29T00:00:00Z",
-      "count": 113,
-      "count_minmax": [ 113, 113 ],
-      "count_decinc": [ 0, 113 ],
+      "count": 208,
+      "count_minmax": [ 113, 208 ],
+      "count_decinc": [ 0, 208 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
