@@ -1,10 +1,10 @@
 {
-  "count": 4137,
+  "count": 4140,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 133,
+      "count": 41,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-08-29T00:00:00Z",
-      "count": 113,
+      "count": 208,
       "uniques": 3
     }
   ]
